--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>21/05/12 00:08:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.getTitle()[pri:0, instance:com.qa.Zoopla.Test.HomePage@29774679]">getTitle</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_Test.closeBrowser()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:55</td>   <td>10390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_Test.closeBrowser()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:36</td>   <td>-8685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_Test.startApp()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">&gt;&gt;startApp</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:46</td>   <td>1572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_Test.startApp()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">&gt;&gt;startApp</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:44</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_Test.studentBarIsNotSelectedValidation()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">studentBarIsNotSelectedValidation</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/05/14 21:07:55</td>   <td>10382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_Test.validateHomepageTitle()[pri:0, instance:com.qa.Zoopla.Test.HomePage_Test@6a4f787b]">validateHomepageTitle</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
 </table>
