--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.Zoopla.Test.HomePage_Test" hash-for-method="studentBarIsNotSelectedValidation">studentBarIsNotSelectedValidation</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.Zoopla.Test.HomePage_Test" hash-for-method="fromDisplayed">fromDisplayed</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -129,9 +129,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="studentBarIsNotSelectedValidation">
-                  </a> <!-- studentBarIsNotSelectedValidation -->
-                  <span class="method-name">studentBarIsNotSelectedValidation</span>
+                  <a name="fromDisplayed">
+                  </a> <!-- fromDisplayed -->
+                  <span class="method-name">fromDisplayed</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'studentBarIsNotSelectedValidation')
+data.setCell(0, 1, 'fromDisplayed')
 data.setCell(0, 2, 'com.qa.Zoopla.Test.HomePage_Test')
-data.setCell(0, 3, 50);
+data.setCell(0, 3, 32);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'validateHomepageTitle')
 data.setCell(1, 2, 'com.qa.Zoopla.Test.HomePage_Test')
-data.setCell(1, 3, 18);
+data.setCell(1, 3, 26);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 68 ms</span>
+              <span class="suite-total-time">Total running time: 58 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -241,24 +241,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">studentBarIsNotSelectedValidation</span>
-                <span class="method-start">9221 ms</span>
+                <span class="method-name">fromDisplayed</span>
+                <span class="method-start">8230 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">9272 ms</span>
+                <span class="method-start">8269 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">startApp</span>
-                <span class="method-start">10414 ms</span>
+                <span class="method-start">10350 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateHomepageTitle</span>
-                <span class="method-start">19924 ms</span>
+                <span class="method-start">22456 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">19945 ms</span>
+                <span class="method-start">22482 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
