--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>studentBarIsNotSelectedValidation</td>
+<td>fromDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
